--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,12 @@
 		"rules": {
 			"recommended": true,
 			"suspicious": {
-				"noExplicitAny": "off"
+				"noExplicitAny": "off",
+				"useValidTypeof": "off"
+			},
+			"style": {
+				"noNonNullAssertion": "off",
+				"noParameterAssign": "off"
 			}
 		}
 	},
