--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
 			},
 			"style": {
 				"noNonNullAssertion": "off",
-				"noParameterAssign": "off"
+				"noParameterAssign": "off",
+				"noUnusedTemplateLiteral": "off"
 			}
 		}
 	},
