--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
 		"format": "biome format .",
 		"format:fix": "biome format --write .",
 		"tsc": "tsc --noEmit",
-		"test": "NO_EXIT=true vitest",
-		"test:watch": "vitest --watch",
-		"test:coverage": "vitest --coverage",
+		"test": "NO_EXIT=true bun test",
+		"test:watch": "bun test --watch",
+		"test:coverage": "bun test --coverage",
 		"release": "bumpp --commit --push --tag",
 		"publish:ci": "bun publish --access public --no-git-checks",
 		"prepare": "husky"
@@ -42,8 +42,7 @@
 		"bumpp": "^10.2.0",
 		"bunup": "^0.9.2",
 		"husky": "^9.1.7",
-		"typescript": "^5.8.3",
-		"vitest": "^3.2.4"
+		"typescript": "^5.8.3"
 	},
 	"repository": {
 		"type": "git",
