--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"test": "NO_EXIT=true bun test",
 		"test:watch": "bun test --watch",
 		"test:coverage": "bun test --coverage",
+		"bench": "bun run benchmark.ts",
 		"release": "bumpp --commit --push --tag",
 		"publish:ci": "bun publish --access public --no-git-checks",
 		"prepare": "husky"
@@ -39,10 +40,14 @@
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-conventional": "^19.8.1",
 		"@types/bun": "^1.2.18",
+		"@types/yargs": "^17.0.33",
 		"bumpp": "^10.2.0",
 		"bunup": "^0.9.2",
+		"cac": "^6.7.14",
+		"commander": "^14.0.1",
 		"husky": "^9.1.7",
-		"typescript": "^5.8.3"
+		"typescript": "^5.8.3",
+		"yargs": "^18.0.0"
 	},
 	"repository": {
 		"type": "git",
